# QuadProgpp

./: CMakeLists.txt
include/quadprog++/: QuadProg++.hh
src/: Array.cc  QuadProg++.cc  main.cc
